# testproj

./: .gitignore  noxfile.py  pyproject.toml  readme.md
src/textnets/: console.py  wiki.py
tests/: conftest.py  test_console.py  test_sample.py  test_wiki.py
