[tool.poetry]
name = "textnets"
version = "0.1.0"
description = ""
authors = ["marcalph <marcalph@protonmail.com>"]
license = "MIT"

[tool.poetry.scripts]
textnets = "textnets.console:main"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["textnets"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


